src/styles/home/ContentCircle.module.css
*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Outfit", sans-serif;
}

body {
  margin: 0;
  padding: 0;
  width: 100vw;
}

.contentContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: var(--primary-color);
}

.innerContent {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 3rem 0;
}

.textContent {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 2rem 0;
}

.titleContent {
  font-size: 2.25rem;
  margin-bottom: 5rem;
  margin-top: 0.5rem;
}

.undertitleContent {
  font-size: 1.3rem;
  font-weight: 600;
  margin-bottom: 1rem;
  color: var(--nav-color);
}

.paragraphContent {
  font-size: 1.1rem;
  word-spacing: 1px;
  line-height: 2rem;
  max-width: 90%;
}

.fadeInSlideIn {
  opacity: 1;
  transform: translateY(0);
  animation: fadeInSlideIn 1s forwards;
}

@keyframes fadeInSlideIn {
  from {
    opacity: 0;
    transform: translateY(60px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.hidden {
  opacity: 0;
}

/* -------------2nd section - Circle----------------- */

.circleContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70vh;
  width: 100%;
  padding: 2rem;
  background-color: var(--grey-color);
  overflow: hidden;
}

.circleBackground {
  position: relative;
}

.circleBackground h2 {
  color: transparent;
}

.circleBack,
.circleFront {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.circleBack {
  left: 140%;
  opacity: 0.8;
  width: calc(18rem + 20vw);
  height: calc(18rem + 20vw);
}

.circleFront {
  width: calc(18rem + 20vw);
  height: calc(18rem + 20vw);
  border-radius: 50%;
}

/* Small phones */
@media only screen and (max-width: 389px) {
  .circleBack,
  .circleFront {
    width: calc(18rem + 20vw);
    height: calc(18rem + 20vw);
  }
}

/* Uncommon phone size */
@media only screen and (min-width: 500px) and (max-width: 599px) {
  .titleContent {
    font-size: 2.5rem;
  }

  .undertitleContent {
    font-size: 1.5rem;
    max-width: 32rem;
  }

  .paragraphContent {
    font-size: 1.2rem;
  }

  .circleBack,
  .circleFront {
    width: calc(22rem + 20vw);
    height: calc(22rem + 20vw);
  }
}

/* Small Tablet */
@media only screen and (min-width: 600px) and (max-width: 769px) {
  .titleContent {
    font-size: 2.5rem;
  }

  .undertitleContent {
    font-size: 1.5rem;
    max-width: 32rem;
  }

  .paragraphContent {
    font-size: 1.2rem;
  }

  .circleBack,
  .circleFront {
    width: calc(27rem + 20vw);
    height: calc(27rem + 20vw);
  }
}

/* Desktop */
@media only screen and (min-width: 770px) {
  .contentContainer {
    flex-direction: row;
    justify-content: space-between;
  }

  .innerContent {
    flex-direction: column;
    width: 50%;
  }

  .textContent p {
    max-width: 85%;
    padding: 0;
  }

  .titleContent {
    font-size: 3rem;
    max-width: 31.25rem;
  }

  .undertitleContent {
    font-size: 1.8rem;
    width: 85%;
    max-width: 39rem;
  }

  .paragraphContent {
    font-size: 1.3rem;
  }

  .circleContainer {
    width: 50%;
    height: 90vh;
    overflow: hidden;
    padding: 2rem 0;
  }

  .circleBack,
  .circleFront {
    width: calc(13rem + 20vw);
    height: calc(13rem + 20vw);
  }
}

/* Fonts */
@media only screen and (min-width: 1200px) {
  .titleContent {
    font-size: 3.5rem;
  }

  .undertitleContent {
    font-size: 2rem;
  }

  .textContent p {
    max-width: 60%;
    padding: 0;
  }
}

